@@ -1,3 +1,3 @@
 module Vzaar
-  VERSION = "1.4.4"
+  VERSION = "1.4.5"
 end
